--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -18,10 +18,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+      - name: Build base Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: registry.sonnvest.de/sonnvest/alpine-cron:latest
+          platforms: linux/amd64
+          
+      - name: Build Node.js 22 Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile.node-22
+          push: true
+          tags: registry.sonnvest.de/sonnvest/alpine-cron:node-22
           platforms: linux/amd64
