--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -11,9 +11,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          registry: registry.sonnvest.de
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -23,7 +22,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: registry.sonnvest.de/sonnvest/alpine-cron:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/alpine-cron:latest,${{ secrets.DOCKERHUB_USERNAME }}/alpine-cron:${{ github.sha }}
           platforms: linux/amd64
           
       - name: Build Node.js 22 Docker image
@@ -32,5 +31,5 @@ jobs:
           context: .
           file: ./Dockerfile.node-22
           push: true
-          tags: registry.sonnvest.de/sonnvest/alpine-cron:node-22
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/alpine-cron:node-22
           platforms: linux/amd64
